testsuite/tests/properties/invalid_arg_name_override/test.out
test.py:15: error: Argument #1 does not have the same name here (b) as in base property (a)
Done
